--- a/src/App.css
+++ b/src/App.css
@@ -124,29 +124,39 @@ input[name="search"]:focus{
   flex-wrap: flex;
 }
 
-.ListRecipes {
-  text-align: center;
-  margin: 40px 0;
+.listPlanMeal {
+  display: flex;
+  flex-wrap: wrap;
   background-color: white;
-  width: 30%;
-  height: 100%;
+  width: 40%;
+  margin-top: 40px;
+  text-align: center;
   border-right:1px solid black;
 }
 
-.FormatMeal {
+.listRecipes {
+  display: flex;
+  flex-wrap: wrap;
   background-color: white;
-  width: 70%;
-  height: 100%;
+  width: 40%;
   text-align: center;
+  border-top: 1px solid black;
+  border-right:1px solid black;
 }
 
-/* Format Recipe Component */
+.display {
+  /* width: 60%; */
+  margin: 40px 0;
+}
+
+/* SeatchUrl Component */
 li {
   margin-top: 20px;
 }
 
-.recipeTitle {
+.recipeHeader {
   text-align: center;
+  margin-left: 20px;
 }
 
 .recipeInfo {
@@ -162,10 +172,6 @@ li {
 .recipeBody {
   display: flex;
   flex-wrap: flex;
-}
-
-.recipeHeader {
-  margin-left: 20px;
 }
 
 .ingredientsBox {
@@ -185,4 +191,3 @@ li {
   flex-wrap: wrap;
   text-align: left;
 }
-
