--- a/src/App.css
+++ b/src/App.css
@@ -73,27 +73,10 @@ input[name="search"]:focus{
 
 /* Display Recipe Card styling */
 .recipeCard {
-  border: 1px solid grey;
-  margin-top: 20px;
-  width : 30%;
+  margin: 10px 5px;
   background-color: white;
-}
-
-.recipeCard h4 {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0px 16px
-}
-
-.recipeContent {
-  display: flex;
-  flex-wrap: flex;
-}
-
-.recipeDescription {
-  margin-left: 20px;
-  display: flex;
-  flex-wrap: wrap;
+  text-align: center;
+  width: 320px;
 }
 
 /* Login Page */
@@ -118,45 +101,24 @@ input[name="search"]:focus{
   outline: none;
 }
 
-/* PlanMeal page */
-.PlanMeal {
-  display: flex;
-  flex-wrap: flex;
-}
-
-.listPlanMeal {
+/* Display User Saved Recipes */
+.DisplayUserRecipes {
   display: flex;
   flex-wrap: wrap;
-  background-color: white;
-  width: 40%;
-  margin-top: 40px;
-  text-align: center;
-  border-right:1px solid black;
 }
 
-.listRecipes {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: white;
-  width: 40%;
-  text-align: center;
-  border-top: 1px solid black;
-  border-right:1px solid black;
-}
-
-.display {
-  /* width: 60%; */
-  margin: 40px 0;
-}
-
-/* SeatchUrl Component */
+/* Recipe Display Component */
 li {
   margin-top: 20px;
 }
 
+.RecipeDisplay {
+  margin: 100px 0;
+}
+
 .recipeHeader {
   text-align: center;
-  margin-left: 20px;
+  /* margin-left: 20px; */
 }
 
 .recipeInfo {
@@ -192,6 +154,36 @@ li {
   text-align: left;
 }
 
+/* PlanMeal page */
+.PlanMeal {
+  display: flex;
+}
+
+.lists {
+  width: 25%;
+  list-style-type: none;
+}
+
+.listPlanMeal {
+  background-color: white;
+  margin-top: 60px;
+  text-align: center;
+  border-right:1px solid black;
+}
+
+.listRecipes {
+  background-color: white;
+  text-align: center;
+  border-top: 1px solid black;
+  border-right:1px solid black;
+  height: 100%;
+}
+
+.display {
+  width: 75%;
+}
+
+/* Plan Meal Display page */
 .mealInstructions {
   margin-top: 100px;
   text-align: center;
