--- a/src/App.css
+++ b/src/App.css
@@ -38,17 +38,17 @@ body {
 /* Title Box Styling */
 .hero {
   display: flex;
-  background: url("https://images.pexels.com/photos/1150447/pexels-photo-1150447.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+  background: url("https://images.pexels.com/photos/905847/pexels-photo-905847.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
   background-position: center;
   justify-content: center;
   align-items: center;
-  font-size: 400%;
   height: 100vh;
   width: 100vw;
 }
 
 .hero h1 {
   color: white;
+  font-size: 600%;
 }
 
 .hero-body {
@@ -95,19 +95,65 @@ input[name="hero-input"]:focus{
   align-items: center;
   border: 1px solid black;
   margin: 300px auto;
-  height: 200px;
+  height: 220px;
   width: 400px;
   background-color: white;
   box-shadow: 0px 5px 5px grey;
+}
+
+.loginCard h2 {
+  margin-top: 10px;
 }
 
 .loginCard input {
   background: transparent;
   border: none;
   border-bottom: 1px solid #ccc;
+  margin: 5px;
 }
 
 .loginCard input:focus {
+  outline: none;
+}
+
+.loginCard button {
+  margin: 10px;
+}
+
+/* Create Account */
+.CreateAccount {
+  text-align: center;
+  border: 1px solid black;
+  margin: 150px auto;
+  height: 700px;
+  width: 600px;
+  background-color: white;
+  box-shadow: 0px 5px 5px grey;
+  justify-content: center;
+}
+
+
+.CreateAccount h2,h4,button {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.createAccountForm {
+  text-align: left;
+  margin-left: 20%;
+}
+
+.CreateAccount input {
+  margin-bottom: 20px;
+  width: 80%;
+  display: block;
+  box-sizing: border-box;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #ccc;
+}
+
+.CreateAccount input:focus{
   outline: none;
 }
 
@@ -165,13 +211,52 @@ li {
 }
 
 /* PlanMeal page */
-.PlanMeal {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .listPlanMeal {
   margin-top: 60px;
   text-align: center;
 }
+
+.PlanMealCard {
+  background-color: white;
+  margin: 20px;
+  padding: 0px 20px;
+}
+
+.rightColumn {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 1000px;
+  text-align: left;
+}
+
+.tabs {
+  top: 0;
+  margin-bottom: 20px;
+  vertical-align: top;
+}
+
+/* Display Planned Meal */
+.PlanMealDisplay { 
+  display: flex;
+  margin-top: 100px;
+}
+
+.planMeal {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.planMeal td {
+  padding: 10px;
+}
+
+.planMealHeader {
+  text-align: center;
+}
+
+.planMealTimeStep {
+  text-align: center;
+  border-right: 1px black solid;
+}
+
