start creating edit recipe component

--- a/src/App.css
+++ b/src/App.css
@@ -100,8 +100,8 @@ input[name="hero-input"]:focus{
   align-items: center;
   border: 1px solid black;
   margin: 300px auto;
-  height: 220px;
-  width: 400px;
+  height: 50%;
+  width: 27%;
   background-color: white;
   box-shadow: 0px 5px 5px grey;
 }
@@ -209,7 +209,11 @@ li {
 }
 
 .RecipeDisplay {
-  margin: 100px 0;
+  margin: 80px 0;
+}
+
+.RecipeDisplay a {
+  text-align: right;
 }
 
 .recipeHeader {
@@ -257,6 +261,7 @@ li {
 
 .DisplaySavedRecipe button {
   margin: 0 32px;
+  text-align: center;
 }
 
 /* SearchUrl */
