--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 
 }
 
+
 body {
   background: wheat;
 }
@@ -261,7 +262,7 @@ li {
 
 .DisplaySavedRecipe button {
   margin: 0 32px;
-  text-align: center;
+  justify-content: center;
 }
 
 /* SearchUrl */
